# sui_json_rpc_wrapper

./: .gitignore  README.md  __init__.py  pyproject.toml
sui_json_rpc/: __init__.py  base.py  config.py  method_builder.py  methods.py  provider.py
tests/: test_sui_json_rpc.py
