[tool.poetry]
name = "sui_json_rpc"
version = "0.1.0"
description = "Sui JSON RPC wrapper"
authors = ["Arzu Huseynov <hi@arzuh.me>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.12.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
